# mpu6886

./: Cargo.toml  README.md
examples/: README.md  motion_detection.rs  simple.rs  test.rs
src/: bits.rs  config.rs  device.rs  error.rs  lib.rs
